crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@field_arithmetic_in_cairo_m___complex_expressions.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Field Arithmetic in Cairo-M - Complex Expressions"
input_file: mdtest/01-basics/04-arithmetic.md
---
Source:
fn complex_expression() -> felt {
    let x = 5;
    let y = 3;
    let z = 7;
    return (x * y + z) * (x - y) / 2;  // (15 + 7) * 2 / 2 = 22
}
============================================================
Generated MIR:
module {
  // Function 0
  fn complex_expression {
    entry: 0

    0:
      %0 = 5
      %1 = 3
      %2 = 7
      %3 = %0 Mul %1
      %4 = %3 Add %2
      %5 = %0 Sub %1
      %6 = %4 Mul %5
      %7 = %6 Div 2
      return %7

  }

}
