crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@field_arithmetic_in_cairo_m___division_in_field_2.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Field Arithmetic in Cairo-M - Division in Field 2"
input_file: mdtest/01-basics/04-arithmetic.md
---
Source:
fn field_division_non_divisible() -> felt {
    let a = 7;
    let b = 3;
    return a / b;  // Returns 1431655767 (uses field inverse)
}
============================================================
Generated MIR:
module {
  // Function 0
  fn field_division_non_divisible {
    entry: 0

    0:
      %0 = 7
      %1 = 3
      %2 = %0 / %1
      return %2

  }

}
