crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@field_arithmetic_in_cairo_m___field_wraparound.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Field Arithmetic in Cairo-M - Field Wraparound"
input_file: mdtest/01-basics/04-arithmetic.md
---
Source:
fn test_wrap_around_upper() -> felt {
    let max = 2147483646;  // 2^31 - 2
    return max + 1;  // Wraps to 2^31 - 1 == 0
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_wrap_around_upper {
    entry: 0

    0:
      %0 = 2147483646
      %1 = %0 + 1
      return %1

  }

}
