crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@field_arithmetic_in_cairo_m___field_wraparound_3.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Field Arithmetic in Cairo-M - Field Wraparound 3"
input_file: mdtest/01-basics/04-arithmetic.md
---
Source:
fn test_wraparound_lower() -> felt {
    let min = 0;
    return min - 1;  // Wraps to 2^31 - 2
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_wraparound_lower {
    entry: 0

    0:
      %0 = 0
      %1 = %0 - 1
      return %1

  }

}
