crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@field_arithmetic_in_cairo_m___negative_numbers.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Field Arithmetic in Cairo-M - Negative Numbers"
input_file: mdtest/01-basics/04-arithmetic.md
---
Source:
fn negative_arithmetic() -> felt {
    let a = 10;
    let b = -5;
    let c = a + b;  // 10 + (-5) = 5
    let d = b * 2;  // -5 * 2 = -10
    return c - d;   // 5 - (-10) = 15
}
============================================================
Generated MIR:
module {
  // Function 0
  fn negative_arithmetic {
    entry: 0

    0:
      %0 = 10
      %1 = 2147483642
      %2 = %0 + %1
      %3 = %1 * 2
      %4 = %2 - %3
      return %4

  }

}
