crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@field_arithmetic_in_cairo_m___overflow_behavior.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Field Arithmetic in Cairo-M - Overflow Behavior"
input_file: mdtest/01-basics/04-arithmetic.md
---
Source:
fn test_overflow() -> felt {
    let large = 2147483640;  // Close to 2^31 - 1
    return large + 12;        // Wraps around
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_overflow {
    entry: 0

    0:
      %0 = 2147483640
      %1 = %0 Add 12
      return %1

  }

}
