crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@field_arithmetic_in_cairo_m___zero_and_one.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Field Arithmetic in Cairo-M - Zero and One"
input_file: mdtest/01-basics/04-arithmetic.md
---
Source:
fn identity_elements() -> felt {
    let x = 42;
    let zero_add = x + 0;      // Additive identity
    let one_mult = x * 1;      // Multiplicative identity
    let zero_mult = x * 0;     // Multiplication by zero
    return zero_add + one_mult - zero_mult;  // 42 + 42 - 0 = 84
}
============================================================
Generated MIR:
module {
  // Function 0
  fn identity_elements {
    entry: 0

    0:
      %0 = 42
      %1 = %0 + 0
      %2 = %0 * 1
      %3 = %0 * 0
      %4 = %1 + %2
      %5 = %4 - %3
      return %5

  }

}
